# telegram-antispam-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: main.rs  spam_check.rs  training.rs
