[package]
name = "tg_antispam_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bayespam = "1.1.0"
csv = "1.2.1"
lazy_static = "1.4.0"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde = "1.0.160"

[profile.release]
lto = "fat"
debug = 0
opt-level = 3
strip = true
overflow-checks = false
panic = "abort"
incremental = true